--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,10 @@
       <version>RELEASE</version>
       <scope>test</scope>
     </dependency>
+    <dependency>  
+      <groupId>org.javatuples</groupId>  
+      <artifactId>javatuples</artifactId>  
+      <version>1.2</version>  
+    </dependency>  
   </dependencies>
 </project>
